# Home-Energy-Management-System-HEMS-Rust-Implementation

./: README.md
backend/: Cargo.toml
backend/hems-core/: .dockerignore  .env  Cargo.toml  Dockerfile  hems.db
backend/hems-core/.sqlx/: query-2fbff9980763517a1d59a74d94939b7d3a5107d87bce3bdffe333546bceee4b1.json  query-6eb3cb047f4408aeda68fc13c043100e037339800dee76cc6acb25d14fdfe43e.json  query-88e69120b97313e9b0debcf52b754eadfb1cb90c3c6abeaf89bffe447a0059b0.json  query-cbceb36f87d840c61ea27e755610be7063411695bb46611345138cdc5208c71b.json  query-cd60b6fb9e845a51fe120c8f6b4544e4924d7fd3e563d60d6dfa5edbc5f8ee73.json  query-fffb96c07602bad889bc701596cf261f7d744b3b3968829239100904a2a051f8.json
backend/hems-core/migrations/: 20240101000000_initial_schema.sql
backend/hems-core/reports/: analysis_Baseline.csv  analysis_LoadShifting.csv  analysis_SmartShift.csv  analysis_Solar.csv  analysis_SolarOnly.csv
backend/hems-core/src/: analysis.rs  api.rs  main.rs  models.rs  simulation.rs
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: AnalysisPanel.tsx  ControlPanel.tsx  DeviceList.tsx  EnergyCard.tsx  EnergyChart.tsx  TheorySection.tsx
frontend/src/types/: index.ts
